2008-09-24  Soren Hauberg  <hauberg@gmail.com>

	* DLD-FUNCTIONS/__magick_read__.cc (magick_to_octave_value): New
	template function with specializations for various
	GraphicsMagick++ types.
	(F__magick_finfo__): New function.

2008-09-24  John W. Eaton  <jwe@octave.org>

	* ov-usr-fcn.cc (octave_user_function::do_multi_index_op):
	Add symbol_table::clear_variables cleanup function to the
	unwind_protect stack after the parameter list cleanup functions.

	* load-path.cc (load_path::do_initialize): Check for OCTAVE_PATH
	in the environment, not OCTAVE_LOADPATH.

2008-09-24  Thomas Weber  <thomas.weber.mail@gmail.com>

	* DLD-FUNCTIONS/regexp.cc (octregexp_list): Retry if match limit
	is exceeded.

2008-09-24  John W. Eaton  <jwe@octave.org>

	* genprops.awk (emit_declarations): Emit call to set_mode before
	updaters.

2008-09-23  John W. Eaton  <jwe@octave.org>

	* pt-arg-list.cc (F__end__): Dispatch to user-defined end
	function for classes if one is defined.
	* lex.l (is_keyword_token): Allow "end" as a functon name.

2008-09-23  David Bateman  <dbateman@free.fr>

	* variables.cc (static octave_value do_who (int, const string_vector&,
	bool, bool, std::string): Add final message argument and simple
	treatment of the "-file" option.

2008-09-22  David Bateman  <dbateman@free.fr>

	* debug.cc (static octave_user_code * get_user_code 
	(const std::string&)): Only check user code as break points can't
	be set in builtins or oct-files.
	(bp_table::intmap bp_table::do_remove_all_breakpoints_in_file 
	(const std::string&, bool)): Add flag to silence the error message 
	from this function if a user code with breakpoints is not found.
	(bp_table::fname_line_map bp_table::do_get_breakpoint_list (const 
	octave_value_list&)): Do an ourt of date check on the function
	before checking the breakpoints.
	* debug.h (do_remove_all_breakpoints_in_file, 
	remove_all_breakpoints_in_file): Add flag to silence error
	message.